--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,8 +15,31 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
+  opa:
+    name: OPA policy build & tests
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+
+      - name: Set up OPA CLI
+        uses: open-policy-agent/setup-opa@v1
+        with:
+          version: latest
+
+      - name: Build OPA bundle
+        run: make opa-build
+
+      - name: Run OPA policy tests
+        run: make opa-test
+
   go:
-    name: Go lint & test
+    name: Go lint, test & coverage
     runs-on: ubuntu-latest
     if: ${{ hashFiles('**/go.mod') != '' }}
     steps:
@@ -55,8 +78,14 @@ jobs:
       - name: Go vet
         run: go vet ./...
 
-      - name: Go test
-        run: go test ./...
+      - name: Go test with coverage
+        run: go test ./... -coverpkg=./... -coverprofile=coverage.out
+
+      - name: Enforce Go coverage minimum
+        run: |
+          coverage=$(go tool cover -func=coverage.out | awk '/total:/ { gsub("%","",$3); print $3 }')
+          echo "Go coverage: ${coverage}%"
+          python3 -c "import sys; coverage=float(sys.argv[1]); threshold=60.0; raise SystemExit(f'Coverage {coverage:.2f}% is below threshold {threshold:.2f}%') if coverage < threshold else print(f'Coverage {coverage:.2f}% meets threshold {threshold:.2f}%')" "$coverage"
 
   typescript:
     name: TypeScript lint, test & build (${{ matrix.project.name }})
@@ -68,9 +97,11 @@ jobs:
           - name: orchestrator
             path: services/orchestrator
             node: '20'
+            coverage: "npm run test:coverage"
           - name: cli
             path: apps/cli
             node: '20'
+            coverage: "npm run test:coverage"
     defaults:
       run:
         working-directory: ${{ matrix.project.path }}
@@ -117,8 +148,8 @@ jobs:
             echo "tsconfig.json not found, skipping type check"
           fi
 
-      - name: Run tests
-        run: npm run test --if-present -- --run
+      - name: Run tests with coverage
+        run: ${{ matrix.project.coverage }}
 
       - name: Run queue integration tests
         if: matrix.project.name == 'orchestrator'
@@ -140,8 +171,58 @@ jobs:
         if: matrix.project.name == 'cli'
         run: npm run build
 
+  gui-e2e:
+    name: GUI Playwright E2E
+    runs-on: ubuntu-latest
+    needs:
+      - typescript
+    defaults:
+      run:
+        working-directory: apps/gui
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
+          cache-dependency-path: apps/gui/package-lock.json
+
+      - name: Install npm dependencies
+        run: npm ci
+
+      - name: Install Playwright browsers
+        run: npx playwright install --with-deps
+
+      - name: Start mock orchestrator
+        run: |
+          npm run mock:orchestrator &
+          MOCK_PID=$!
+          echo "MOCK_PID=$MOCK_PID" >> "$GITHUB_ENV"
+          npx --yes wait-on http://127.0.0.1:4010/healthz
+
+      - name: Run Playwright tests
+        env:
+          VITE_ORCHESTRATOR_URL: http://127.0.0.1:4010
+          CI: "true"
+        run: npm run test:e2e -- --reporter=list --reporter=html
+
+      - name: Stop mock orchestrator
+        if: always() && env.MOCK_PID != ''
+        run: kill ${{ env.MOCK_PID }} || true
+
+      - name: Upload Playwright report
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: gui-playwright-report
+          path: apps/gui/playwright-report
+          retention-days: 5
+
   rust:
-    name: Rust fmt, lint & test
+    name: Rust fmt, lint & coverage
     runs-on: ubuntu-latest
     if: ${{ hashFiles('**/Cargo.toml') != '' }}
     steps:
@@ -178,5 +259,48 @@ jobs:
       - name: Cargo clippy
         run: cargo clippy --all-targets --all-features -- -D warnings
 
-      - name: Cargo test
-        run: cargo test --all
+      - name: Install llvm-tools-preview
+        run: rustup component add llvm-tools-preview
+
+      - name: Install cargo-llvm-cov
+        uses: taiki-e/install-action@v2
+        with:
+          tool: cargo-llvm-cov
+
+      - name: Cargo coverage (llvm-cov)
+        run: cargo llvm-cov --all-features --fail-under-lines 60
+
+  e2e:
+    name: Multi-service E2E
+    runs-on: ubuntu-latest
+    needs:
+      - go
+      - typescript
+      - rust
+    defaults:
+      run:
+        working-directory: services/orchestrator
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
+          cache-dependency-path: services/orchestrator/package-lock.json
+
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: '1.22'
+          check-latest: true
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Run multi-service E2E tests
+        env:
+          NODE_ENV: test
+        run: npm run test:e2e
