--- a/apps/cli/package.json
+++ b/apps/cli/package.json
@@ -8,9 +8,11 @@
   "scripts": {
     "build": "esbuild src/index.ts --bundle --platform=node --outfile=dist/index.js",
     "dev": "ts-node src/index.ts",
-    "test": "npm run build && node --test tests/*.test.js"
+    "test": "npm run build && node --test tests/*.test.js",
+    "test:coverage": "npm run build && c8 --check-coverage --branches 60 --functions 60 --lines 60 --statements 60 node --test tests/*.test.js"
   },
   "devDependencies": {
+    "c8": "^9.1.0",
     "esbuild": "^0.25.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
