--- a/services/indexer/Cargo.toml
+++ b/services/indexer/Cargo.toml
@@ -15,6 +15,9 @@ tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
 thiserror = "1"
 tower-lsp = "0.20"
+futures = "0.3"
+hyper = { version = "1", features = ["http1", "server"] }
+tokio-stream = { version = "0.1", features = ["net"] }
 tree-sitter = "0.21"
 tree-sitter-rust = "0.21"
 tree-sitter-typescript = "0.21"
@@ -26,3 +29,16 @@ uuid = { version = "1", features = ["v4", "serde", "fast-rng"] }
 parking_lot = "0.12"
 regex = "1"
 tower = { version = "0.4", features = ["util"] }
+once_cell = "1"
+sha2 = "0.10"
+jsonwebtoken = "9"
+opentelemetry = "0.22"
+opentelemetry_sdk = { version = "0.22", features = ["rt-tokio"] }
+opentelemetry-otlp = { version = "0.15", features = ["grpc-tonic", "tls"] }
+tracing-opentelemetry = "0.23"
+tower-http = { version = "0.5", features = ["trace"] }
+tonic = { version = "0.11", features = ["transport"] }
+opentelemetry-semantic-conventions = "0.14"
+
+[dev-dependencies]
+tempfile = "3"
