--- a/services/orchestrator/package.json
+++ b/services/orchestrator/package.json
@@ -26,6 +26,9 @@
     "build": "tsc -p tsconfig.json",
     "start": "node dist/index.js",
     "test": "vitest run",
+    "test:coverage": "vitest run --coverage",
+    "test:e2e": "vitest run src/e2e/multiService.e2e.test.ts",
+    "lint": "eslint \"src/**/*.{ts,tsx}\"",
     "postinstall": "node ./scripts/prune-mistral-extras.cjs"
   },
   "dependencies": {
@@ -38,6 +41,7 @@
     "@mistralai/mistralai": "^1.10.0",
     "@open-policy-agent/opa-wasm": "^1.8.0",
     "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/auto-instrumentations-node": "^0.48.0",
     "@opentelemetry/exporter-trace-otlp-http": "^0.52.1",
     "@opentelemetry/resources": "^1.9.0",
     "@opentelemetry/sdk-node": "^0.52.1",
@@ -46,7 +50,6 @@
     "amqplib": "^0.10.3",
     "cors": "^2.8.5",
     "express": "^4.19.2",
-    "express-rate-limit": "^7.0.0",
     "ipaddr.js": "^2.2.0",
     "jose": "^5.10.0",
     "kafkajs": "^2.2.4",
@@ -55,8 +58,10 @@
     "openai": "^6.7.0",
     "openrouter-client": "^1.6.2",
     "pg": "^8.16.3",
+    "pino": "^9.3.2",
     "prom-client": "^15.1.3",
     "protobufjs": "^7.5.4",
+    "redis": "^4.7.0",
     "tweetnacl": "^1.0.3",
     "undici": "^6.18.0",
     "yaml": "^2.4.2",
@@ -71,7 +76,12 @@
     "@types/node": "^20.11.30",
     "@types/pg": "^8.11.10",
     "@types/supertest": "^2.0.16",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "@vitest/coverage-v8": "^4.0.8",
     "cross-spawn": "7.0.6",
+    "eslint": "^8.57.0",
+    "pg-mem": "^3.0.5",
     "supertest": "^7.1.4",
     "testcontainers": "^11.7.2",
     "ts-proto": "^1.180.0",
