--- a/.github/workflows/release-charts.yml
+++ b/.github/workflows/release-charts.yml
@@ -35,6 +35,16 @@ jobs:
         with:
           version: v3.14.4
 
+      - name: Cache Helm client data
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cache/helm
+            ~/.config/helm
+          key: ${{ runner.os }}-helm-${{ hashFiles('charts/oss-ai-agent-tool/Chart.yaml', 'charts/oss-ai-agent-tool/Chart.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-helm-
+
       - name: Configure git
         run: |
           git config user.name "github-actions"
