--- a/.github/workflows/release-images.yml
+++ b/.github/workflows/release-images.yml
@@ -98,6 +98,8 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
       - name: Generate SBOM (CycloneDX)
         if: steps.dockerfile.outputs.exists == 'true'
