--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -11,7 +11,7 @@ on:
 permissions:
   contents: read
   security-events: write
-  actions: read
+  actions: write
   id-token: write
 
 concurrency:
