--- a/.github/workflows/kubesec.yml
+++ b/.github/workflows/kubesec.yml
@@ -18,6 +18,25 @@ jobs:
   lint:
     name: Kubesec
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        manifest:
+          - charts/oss-ai-agent-tool/templates/gateway-deployment.yaml
+          - charts/oss-ai-agent-tool/templates/gateway-service.yaml
+          - charts/oss-ai-agent-tool/templates/indexer-deployment.yaml
+          - charts/oss-ai-agent-tool/templates/indexer-service.yaml
+          - charts/oss-ai-agent-tool/templates/ingress.yaml
+          - charts/oss-ai-agent-tool/templates/jaeger.yaml
+          - charts/oss-ai-agent-tool/templates/kafka.yaml
+          - charts/oss-ai-agent-tool/templates/langfuse.yaml
+          - charts/oss-ai-agent-tool/templates/networkpolicy.yaml
+          - charts/oss-ai-agent-tool/templates/orchestrator-deployment.yaml
+          - charts/oss-ai-agent-tool/templates/orchestrator-hpa.yaml
+          - charts/oss-ai-agent-tool/templates/orchestrator-service.yaml
+          - charts/oss-ai-agent-tool/templates/postgres.yaml
+          - charts/oss-ai-agent-tool/templates/rabbitmq.yaml
+          - charts/oss-ai-agent-tool/templates/redis.yaml
     permissions:
       actions: read
       contents: read
@@ -29,13 +48,13 @@ jobs:
       - name: Run kubesec scanner
         uses: controlplaneio/kubesec-action@43d0ddff5ffee89a6bb9f29b64cd865411137b14
         with:
-          input: charts/oss-ai-agent-tool/templates/orchestrator-deployment.yaml
+          input: ${{ matrix.manifest }}
           format: template
           template: template/sarif.tpl
-          output: kubesec-results.sarif
+          output: kubesec-results-${{ replace(matrix.manifest, '/', '-') }}.sarif
           exit-code: "0"
 
       - name: Upload Kubesec scan results to GitHub Security tab
         uses: github/codeql-action/upload-sarif@v3
         with:
-          sarif_file: kubesec-results.sarif
+          sarif_file: kubesec-results-${{ replace(matrix.manifest, '/', '-') }}.sarif
