--- a/apps/cli/package.json
+++ b/apps/cli/package.json
@@ -16,5 +16,8 @@
     "esbuild": "^0.25.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
+  },
+  "dependencies": {
+    "pino": "^9.14.0"
   }
 }
