--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -240,7 +240,17 @@ jobs:
       - name: Install system dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y libglib2.0-dev
+          sudo apt-get install -y \
+            pkg-config \
+            libgtk-3-dev \
+            libglib2.0-dev \
+            libatk1.0-dev \
+            libgdk-pixbuf-2.0-dev \
+            libcairo2-dev \
+            libpango1.0-dev \
+            libsoup2.4-dev \
+            libwebkit2gtk-4.1-dev \
+            libappindicator3-dev
 
       - name: Set up Rust
         uses: dtolnay/rust-toolchain@stable
