--- a/charts/oss-ai-agent-tool/values.yaml
+++ b/charts/oss-ai-agent-tool/values.yaml
@@ -150,6 +150,8 @@ gatewayApi:
     runAsUser: 65532
     runAsGroup: 65532
     fsGroup: 65532
+    seccompProfile:
+      type: RuntimeDefault
   containerSecurityContext:
     allowPrivilegeEscalation: false
     readOnlyRootFilesystem: true
@@ -159,6 +161,7 @@ gatewayApi:
   serviceAccount:
     create: true
     name: ""
+    annotations: {}
   sse:
     maxConnectionsPerIP: 4
   rateLimit:
@@ -202,6 +205,20 @@ orchestrator:
   serviceAccount:
     create: false
     name: ""
+    annotations: {}
+  podSecurityContext:
+    runAsNonRoot: true
+    runAsUser: 65532
+    runAsGroup: 65532
+    fsGroup: 65532
+    seccompProfile:
+      type: RuntimeDefault
+  containerSecurityContext:
+    allowPrivilegeEscalation: false
+    readOnlyRootFilesystem: true
+    capabilities:
+      drop:
+        - ALL
   env:
     LOCAL_SECRETS_PATH: /app/config/secrets/local/secrets.json
   localSecrets:
@@ -290,6 +307,7 @@ indexer:
   serviceAccount:
     create: false
     name: ""
+    annotations: {}
   auth:
     disabled: true
     jwt:
@@ -306,6 +324,8 @@ indexer:
     runAsUser: 65532
     runAsGroup: 65532
     fsGroup: 65532
+    seccompProfile:
+      type: RuntimeDefault
   containerSecurityContext:
     allowPrivilegeEscalation: false
     readOnlyRootFilesystem: true
