Fix Kubesec upload token

--- a/.github/workflows/kubesec.yml
+++ b/.github/workflows/kubesec.yml
@@ -84,4 +84,4 @@ jobs:
         with:
           sarif_file: ${{ steps.render.outputs.sarif_name }}
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.OSSAAT }}
