Restore indexer auth default

--- a/charts/oss-ai-agent-tool/values.yaml
+++ b/charts/oss-ai-agent-tool/values.yaml
@@ -309,7 +309,7 @@ indexer:
     name: ""
     annotations: {}
   auth:
-    disabled: true
+    disabled: false
     jwt:
       secret: ""
       secretSecretName: ""
