--- a/.github/workflows/kubesec.yml
+++ b/.github/workflows/kubesec.yml
@@ -89,21 +89,11 @@ jobs:
               echo "File $sarif exists but is empty." >&2
               exit 1
             fi
-            if ! run_count=$(python3 - "$sarif" <<'PY'
-import json
-import sys
-
-path = sys.argv[1]
-with open(path, 'r', encoding='utf-8') as handle:
-    data = json.load(handle)
-
-runs = data.get("runs", [])
-if not runs:
-    sys.exit(1)
-
-print(len(runs))
-PY
-); then
+            if ! run_count=$(jq -r '.runs | length' "$sarif" 2>/dev/null); then
+              echo "Failed to parse SARIF runs from $sarif." >&2
+              exit 1
+            fi
+            if [ "$run_count" -eq 0 ]; then
               echo "File $sarif contains no SARIF runs." >&2
               exit 1
             fi
