Stabilize CI tooling across languages

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -322,8 +322,10 @@ jobs:
             libcairo2-dev \
             libpango1.0-dev \
             libsoup-3.0-dev \
-            libwebkit2gtk-4.0-dev \
             libappindicator3-dev
+          if ! sudo apt-get install -y libwebkit2gtk-4.1-dev; then
+            sudo apt-get install -y libwebkit2gtk-4.0-dev
+          fi
 
       - name: Set up Rust
         uses: dtolnay/rust-toolchain@stable
