--- a/.github/workflows/kubesec.yml
+++ b/.github/workflows/kubesec.yml
@@ -49,7 +49,7 @@ jobs:
       - name: Install Helm
         uses: azure/setup-helm@v3
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ github.token }}
 
       - name: Render Helm manifest
         id: render
@@ -113,4 +113,4 @@ jobs:
         with:
           sarif_file: rendered/${{ steps.render.outputs.sarif_name }}
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ github.token }}
